--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,14 @@
 body {
     display: flex;
     flex-direction: column;
-    margin-left: 0;
+    margin: 0;
 }
 
 header {
     display: flex;
     justify-content: space-between;
     background-color: #1F2937;
-    padding: 16px 52px;
+    padding: 4pc 10pc;
     align-items: center;
     padding-bottom: 52px;
 }
@@ -16,7 +16,6 @@ header {
 .header-logo {
     display: flex;
     justify-content: space-between;
-    padding: 8px;
     font-size: 24px;
     color: #F9FAF8;
 }
@@ -25,6 +24,56 @@ header {
     font-size: 48px;
     font-weight: 900;
     color: #F9FAF8;
+}
+
+.placeholder-image {
+    background-color: grey;
+    height: 250px;
+    width: 500px;
+    color: #E5E7EB;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.secondary {
+    font-size: 18px;
+    color: #E5E7EB;
+}
+
+.second-title {
+    text-align: center;
+    font-size: 36px;
+    font-weight: 800;
+    color: #1F2937;
+}
+
+button {
+    width: 74px;
+    height: 24px;
+    background-color: #3882f6;
+    border: 1px solid white;
+    border-radius: 7px;
+    color: #E5E7EB;
+}
+
+img {
+    width: 150px;
+    height: 150px;
+    border-radius: 15px;
+    border: 5px solid #3882f6
+}
+
+.img-line {
+    display: flex;
+    justify-content:space-around;
+    padding: 16px 100px;
+}
+
+.text {
+    display: flex;
+    width: 150px;
+    text-align: center;
 }
 
 
